# newton-ai

./: .gitignore  README.md  pyproject.toml
src/: main.py  sessions.db
src/agents/: base_agent.py
src/tutor_agents/: __init__.py  agent.py  prompt.py
src/tutor_agents/math_agent/: __init__.py  agent.py  prompt.py
src/tutor_agents/physics_agent/: __init__.py  agent.py  constants.json  prompt.py
src/utils/: logger.py  settings.py
